--- a/frontend/src/styles/components/_navbar.scss
+++ b/frontend/src/styles/components/_navbar.scss
@@ -42,8 +42,9 @@ nav {
         font-family: $font-3;
       }
       img {
-        height: 26px;
-        width: 26px;
+        height: 150px;
+        width: 240px;
+        object-fit:contain;
       }
     }
     
