--- a/frontend/src/styles/components/_leftNav.scss
+++ b/frontend/src/styles/components/_leftNav.scss
@@ -12,6 +12,7 @@
     .icons-bis {
       position: absolute;
       left: 10px;
+      top: 50px;
 
       a {
         transition: 0.1s;
@@ -42,9 +43,9 @@
           }
         }
 
-        img {
+         img{
           @media screen and(max-width: 590px) {
-            height: 34px;
+            height: 50px;
             width: 34px;
           }
         }
