--- a/frontend/src/styles/pages/_profil.scss
+++ b/frontend/src/styles/pages/_profil.scss
@@ -297,8 +297,12 @@
     .right-part {
       text-align: center;
       padding: 20px 40px;
+      .pseudo-update{
+        margin: 60px;
+      }
       h3 {
-        margin-bottom: 12px;
+        margin-bottom: 30px;
+        text-align: center;
       }
       p,
       textarea {
